--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Welcome to the most extraordinary hoytel in Boston Massachusetts">
     <meta name="keywords" content="hotel,boston hotel new engaland hotel">
     <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" media="screen and (max-width:768px)" href="/CSS/mobile.css">
     <title>Hotel BT | About</title>
 </head>
 
